WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284329
[JSC] Fix error message for `Intl.NumberFormat`'s `currencyDisplay` option
https://bugs.webkit.org/show_bug.cgi?id=284329
Summary
[JSC] Fix error message for `Intl.NumberFormat`'s `currencyDisplay` option
Sosuke Suzuki
Reported
2024-12-09 14:36:12 PST
In the current JSC implementation, using an invalid `currencyDisplay` option for `Intl.NumberFormat` throws an error with the message: `currencyDisplay must be either \"code\", \"symbol\", or \"name\"`. However, `"narrowSymbol"` is also a valid option.
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2024-12-09 14:37:18 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37665
EWS
Comment 2
2024-12-10 17:34:33 PST
Committed
287642@main
(f564835d48b7): <
https://commits.webkit.org/287642@main
> Reviewed commits have been landed. Closing PR #37665 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-12-10 17:35:17 PST
<
rdar://problem/141254179
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug