[JSC] Fix error message for `Intl.NumberFormat`'s `currencyDisplay` option https://bugs.webkit.org/show_bug.cgi?id=284329

Reviewed by Yusuke Suzuki.

In the current JSC implementation, using an invalid
`currencyDisplay` option for `Intl.NumberFormat` throws
an error with the message: `currencyDisplay must be
either \"code\", \"symbol\", or \"name\"`.

However, `"narrowSymbol"` is also a valid option.
This patch updates the error message accordingly.

* Source/JavaScriptCore/runtime/IntlNumberFormat.cpp:
(JSC::IntlNumberFormat::initializeNumberFormat):

Canonical link: https://commits.webkit.org/287642@main